--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -9,14 +9,8 @@
     "routes":[
         {
             "src":"/(.*)",
-            "dest":"index.js",
-             "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
-      "headers": {
-        "Access-Control-Allow-Origin": "https://final-chat-frontend-six.vercel.app",
-        "Access-Control-Allow-Credentials": "true",
-        "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, PATCH, OPTIONS",
-        "Access-Control-Allow-Headers": "Content-Type, Authorization"
-      }
+            "dest":"index.js"
+             
         }
     ]
 }
